--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-  <title>Jobs board using React, Node and Webpack</title>
+  <title>Graphql Hack Task</title>
 </head>
 
 <body>
-    <p>Ask React to render code below</p>
-    <div id="root"></div>     
+  <p>Ask React to render code below</p>
+  <div id="root"></div>
 </body>
 
 </html>
